// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TOCEntry is rendered 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  style={Object {}}
>
  <div
    className="mapTocEntry-visible"
  >
    <Connect(TOCEntryActionsPopover)
      displayName="layer 1"
      escapedDisplayName="layer_1"
      isEditButtonDisabled={false}
      layer={
        Object {
          "getDisplayName": [Function],
          "getErrors": [Function],
          "getId": [Function],
          "hasErrors": [Function],
          "hasLegendDetails": [Function],
          "isPreviewLayer": [Function],
          "isVisible": [Function],
          "renderLegendDetails": [Function],
          "showAtZoomLevel": [Function],
          "supportsFitToBounds": [Function],
        }
      }
      openLayerSettings={[Function]}
      supportsFitToBounds={true}
    />
    <div
      className="mapTocEntry__layerIcons"
    >
      <EuiToolTip
        content="Hide layer"
        disableScreenReaderOutput={true}
        key="toggleVisiblity"
      >
        <EuiButtonIcon
          aria-label="Hide layer"
          iconType="eyeSlash"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Fit to data"
        disableScreenReaderOutput={true}
        key="fitToBounds"
      >
        <EuiButtonIcon
          aria-label="Fit to data"
          iconType="maximize"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Edit layer settings"
        disableScreenReaderOutput={true}
        key="settings"
      >
        <EuiButtonIcon
          aria-label="Edit layer settings"
          iconType="pencil"
          isDisabled={false}
          key="settings"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Reorder layer"
        disableScreenReaderOutput={true}
        key="reorder"
      >
        <EuiButtonIcon
          aria-label="Reorder layer"
          className="mapTocEntry__grab"
          iconType="dragVertical"
        />
      </EuiToolTip>
    </div>
  </div>
  <span
    className="mapTocEntry__detailsToggle"
  >
    <button
      aria-label="Show layer details"
      className="mapTocEntry__detailsToggleButton"
      onClick={[Function]}
      title="Show layer details"
    >
      <EuiIcon
        aria-hidden={true}
        className="eui-alignBaseline"
        size="s"
        type="chevronSingleDown"
      />
    </button>
  </span>
</div>
`;

exports[`TOCEntry props Should indent child layer 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  style={
    Object {
      "paddingLeft": "56px",
    }
  }
>
  <div
    className="mapTocEntry-visible"
  >
    <Connect(TOCEntryActionsPopover)
      displayName="layer 1"
      escapedDisplayName="layer_1"
      isEditButtonDisabled={false}
      layer={
        Object {
          "getDisplayName": [Function],
          "getErrors": [Function],
          "getId": [Function],
          "hasErrors": [Function],
          "hasLegendDetails": [Function],
          "isPreviewLayer": [Function],
          "isVisible": [Function],
          "renderLegendDetails": [Function],
          "showAtZoomLevel": [Function],
          "supportsFitToBounds": [Function],
        }
      }
      openLayerSettings={[Function]}
      supportsFitToBounds={true}
    />
    <div
      className="mapTocEntry__layerIcons"
    >
      <EuiToolTip
        content="Hide layer"
        disableScreenReaderOutput={true}
        key="toggleVisiblity"
      >
        <EuiButtonIcon
          aria-label="Hide layer"
          iconType="eyeSlash"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Fit to data"
        disableScreenReaderOutput={true}
        key="fitToBounds"
      >
        <EuiButtonIcon
          aria-label="Fit to data"
          iconType="maximize"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Edit layer settings"
        disableScreenReaderOutput={true}
        key="settings"
      >
        <EuiButtonIcon
          aria-label="Edit layer settings"
          iconType="pencil"
          isDisabled={false}
          key="settings"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Reorder layer"
        disableScreenReaderOutput={true}
        key="reorder"
      >
        <EuiButtonIcon
          aria-label="Reorder layer"
          className="mapTocEntry__grab"
          iconType="dragVertical"
        />
      </EuiToolTip>
    </div>
  </div>
  <span
    className="mapTocEntry__detailsToggle"
  >
    <button
      aria-label="Show layer details"
      className="mapTocEntry__detailsToggleButton"
      onClick={[Function]}
      title="Show layer details"
    >
      <EuiIcon
        aria-hidden={true}
        className="eui-alignBaseline"
        size="s"
        type="chevronSingleDown"
      />
    </button>
  </span>
</div>
`;

exports[`TOCEntry props Should shade background when not selected layer 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  style={Object {}}
>
  <div
    className="mapTocEntry-visible"
  >
    <Connect(TOCEntryActionsPopover)
      displayName="layer 1"
      escapedDisplayName="layer_1"
      isEditButtonDisabled={false}
      layer={
        Object {
          "getDisplayName": [Function],
          "getErrors": [Function],
          "getId": [Function],
          "hasErrors": [Function],
          "hasLegendDetails": [Function],
          "isPreviewLayer": [Function],
          "isVisible": [Function],
          "renderLegendDetails": [Function],
          "showAtZoomLevel": [Function],
          "supportsFitToBounds": [Function],
        }
      }
      openLayerSettings={[Function]}
      supportsFitToBounds={true}
    />
    <div
      className="mapTocEntry__layerIcons"
    >
      <EuiToolTip
        content="Hide layer"
        disableScreenReaderOutput={true}
        key="toggleVisiblity"
      >
        <EuiButtonIcon
          aria-label="Hide layer"
          iconType="eyeSlash"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Fit to data"
        disableScreenReaderOutput={true}
        key="fitToBounds"
      >
        <EuiButtonIcon
          aria-label="Fit to data"
          iconType="maximize"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Edit layer settings"
        disableScreenReaderOutput={true}
        key="settings"
      >
        <EuiButtonIcon
          aria-label="Edit layer settings"
          iconType="pencil"
          isDisabled={false}
          key="settings"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Reorder layer"
        disableScreenReaderOutput={true}
        key="reorder"
      >
        <EuiButtonIcon
          aria-label="Reorder layer"
          className="mapTocEntry__grab"
          iconType="dragVertical"
        />
      </EuiToolTip>
    </div>
  </div>
  <span
    className="mapTocEntry__detailsToggle"
  >
    <button
      aria-label="Show layer details"
      className="mapTocEntry__detailsToggleButton"
      onClick={[Function]}
      title="Show layer details"
    >
      <EuiIcon
        aria-hidden={true}
        className="eui-alignBaseline"
        size="s"
        type="chevronSingleDown"
      />
    </button>
  </span>
</div>
`;

exports[`TOCEntry props Should shade background when selected layer 1`] = `
<div
  className="mapTocEntry mapTocEntry-isSelected"
  data-layerid="1"
  style={Object {}}
>
  <div
    className="mapTocEntry-visible"
  >
    <Connect(TOCEntryActionsPopover)
      displayName="layer 1"
      escapedDisplayName="layer_1"
      isEditButtonDisabled={false}
      layer={
        Object {
          "getDisplayName": [Function],
          "getErrors": [Function],
          "getId": [Function],
          "hasErrors": [Function],
          "hasLegendDetails": [Function],
          "isPreviewLayer": [Function],
          "isVisible": [Function],
          "renderLegendDetails": [Function],
          "showAtZoomLevel": [Function],
          "supportsFitToBounds": [Function],
        }
      }
      openLayerSettings={[Function]}
      supportsFitToBounds={true}
    />
    <div
      className="mapTocEntry__layerIcons"
    >
      <EuiToolTip
        content="Hide layer"
        disableScreenReaderOutput={true}
        key="toggleVisiblity"
      >
        <EuiButtonIcon
          aria-label="Hide layer"
          iconType="eyeSlash"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Fit to data"
        disableScreenReaderOutput={true}
        key="fitToBounds"
      >
        <EuiButtonIcon
          aria-label="Fit to data"
          iconType="maximize"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Edit layer settings"
        disableScreenReaderOutput={true}
        key="settings"
      >
        <EuiButtonIcon
          aria-label="Edit layer settings"
          iconType="pencil"
          isDisabled={false}
          key="settings"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Reorder layer"
        disableScreenReaderOutput={true}
        key="reorder"
      >
        <EuiButtonIcon
          aria-label="Reorder layer"
          className="mapTocEntry__grab"
          iconType="dragVertical"
        />
      </EuiToolTip>
    </div>
  </div>
  <span
    className="mapTocEntry__detailsToggle"
  >
    <button
      aria-label="Show layer details"
      className="mapTocEntry__detailsToggleButton"
      onClick={[Function]}
      title="Show layer details"
    >
      <EuiIcon
        aria-hidden={true}
        className="eui-alignBaseline"
        size="s"
        type="chevronSingleDown"
      />
    </button>
  </span>
</div>
`;

exports[`TOCEntry props isReadOnly 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  style={Object {}}
>
  <div
    className="mapTocEntry-visible"
  >
    <Connect(TOCEntryActionsPopover)
      displayName="layer 1"
      escapedDisplayName="layer_1"
      isEditButtonDisabled={false}
      layer={
        Object {
          "getDisplayName": [Function],
          "getErrors": [Function],
          "getId": [Function],
          "hasErrors": [Function],
          "hasLegendDetails": [Function],
          "isPreviewLayer": [Function],
          "isVisible": [Function],
          "renderLegendDetails": [Function],
          "showAtZoomLevel": [Function],
          "supportsFitToBounds": [Function],
        }
      }
      openLayerSettings={[Function]}
      supportsFitToBounds={true}
    />
    <div
      className="mapTocEntry__layerIcons"
    >
      <EuiToolTip
        content="Hide layer"
        disableScreenReaderOutput={true}
        key="toggleVisiblity"
      >
        <EuiButtonIcon
          aria-label="Hide layer"
          iconType="eyeSlash"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Fit to data"
        disableScreenReaderOutput={true}
        key="fitToBounds"
      >
        <EuiButtonIcon
          aria-label="Fit to data"
          iconType="maximize"
          onClick={[Function]}
        />
      </EuiToolTip>
    </div>
  </div>
  <span
    className="mapTocEntry__detailsToggle"
  >
    <button
      aria-label="Show layer details"
      className="mapTocEntry__detailsToggleButton"
      onClick={[Function]}
      title="Show layer details"
    >
      <EuiIcon
        aria-hidden={true}
        className="eui-alignBaseline"
        size="s"
        type="chevronSingleDown"
      />
    </button>
  </span>
</div>
`;

exports[`TOCEntry props should display layer details when isLegendDetailsOpen is true 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  style={Object {}}
>
  <div
    className="mapTocEntry-visible"
  >
    <Connect(TOCEntryActionsPopover)
      displayName="layer 1"
      escapedDisplayName="layer_1"
      isEditButtonDisabled={false}
      layer={
        Object {
          "getDisplayName": [Function],
          "getErrors": [Function],
          "getId": [Function],
          "hasErrors": [Function],
          "hasLegendDetails": [Function],
          "isPreviewLayer": [Function],
          "isVisible": [Function],
          "renderLegendDetails": [Function],
          "showAtZoomLevel": [Function],
          "supportsFitToBounds": [Function],
        }
      }
      openLayerSettings={[Function]}
      supportsFitToBounds={true}
    />
    <div
      className="mapTocEntry__layerIcons"
    >
      <EuiToolTip
        content="Hide layer"
        disableScreenReaderOutput={true}
        key="toggleVisiblity"
      >
        <EuiButtonIcon
          aria-label="Hide layer"
          iconType="eyeSlash"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Fit to data"
        disableScreenReaderOutput={true}
        key="fitToBounds"
      >
        <EuiButtonIcon
          aria-label="Fit to data"
          iconType="maximize"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Edit layer settings"
        disableScreenReaderOutput={true}
        key="settings"
      >
        <EuiButtonIcon
          aria-label="Edit layer settings"
          iconType="pencil"
          isDisabled={false}
          key="settings"
          onClick={[Function]}
        />
      </EuiToolTip>
      <EuiToolTip
        content="Reorder layer"
        disableScreenReaderOutput={true}
        key="reorder"
      >
        <EuiButtonIcon
          aria-label="Reorder layer"
          className="mapTocEntry__grab"
          iconType="dragVertical"
        />
      </EuiToolTip>
    </div>
  </div>
  <div
    className="mapTocEntry__layerDetails"
    data-test-subj="mapLayerTOCDetailslayer_1"
  >
    <LegendDetails
      inspectorAdapters={Object {}}
      layer={
        Object {
          "getDisplayName": [Function],
          "getErrors": [Function],
          "getId": [Function],
          "hasErrors": [Function],
          "hasLegendDetails": [Function],
          "isPreviewLayer": [Function],
          "isVisible": [Function],
          "renderLegendDetails": [Function],
          "showAtZoomLevel": [Function],
          "supportsFitToBounds": [Function],
        }
      }
    />
  </div>
  <span
    className="mapTocEntry__detailsToggle"
  >
    <button
      aria-label="Hide layer details"
      className="mapTocEntry__detailsToggleButton"
      onClick={[Function]}
      title="Hide layer details"
    >
      <EuiIcon
        aria-hidden={true}
        className="eui-alignBaseline"
        size="s"
        type="chevronSingleUp"
      />
    </button>
  </span>
</div>
`;
